Fix FAQs overflow

--- a/src/stylesheets/pageparts/_faqs.sass
+++ b/src/stylesheets/pageparts/_faqs.sass
@@ -14,9 +14,11 @@
 
   &__col
     flex: 0 0 100%
+    width: 100%
 
     @media (min-width: $smallDesktop)
       flex: 0 1 50%
+      width: 50%
 
   &__title
     @media (min-width: $tablet)
